force-app/main/default/objects/Source__c/Source__c.object-meta.xml
<CustomObject>
    <description>Stores entities that generate income, such as employers, clients, or institutions.</description>
    <label>Source</label>
    <nameField>
        <label>Credit Source</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>