force-app/main/default/objects/Source__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this source is active</description>
    <inlineHelpText>Indicates whether this source is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>