force-app/main/default/objects/Source__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional details about the source</description>
    <inlineHelpText>Add notes such as employer details or payment information.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>